--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "./dist/server.js",
+  "type": "module",
   "scripts": {
     "test": "jest --verbose --runInBand --testLocationInResults --setupFiles dotenv/config",
     "test:watch": "npm run test -- --watch",
@@ -21,10 +22,11 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.5",
     "@babel/plugin-syntax-class-properties": "^7.12.13",
+    "@types/express": "^4.17.12",
     "@types/jest": "^26.0.23",
     "@types/pg": "^8.6.0",
-    "eslint": "^7.29.0",
     "concurrently": "^6.2.0",
+    "eslint": "^7.29.0",
     "jest": "^27.0.4",
     "nodemon": "^2.0.7",
     "supertest": "^6.1.3",
